[gd_scene load_steps=51 format=3 uid="uid://bd3r5eky344wd"]

[ext_resource type="Script" path="res://Scripts/turkey.gd" id="1_ltaqm"]
[ext_resource type="Texture2D" uid="uid://cl1upaovxvjpb" path="res://assets/pics/spritesheets/idle.png" id="1_vb6q4"]
[ext_resource type="Texture2D" uid="uid://bnjaj7ohtjina" path="res://assets/pics/spritesheets/walk.png" id="2_2lr2m"]
[ext_resource type="Texture2D" uid="uid://b4bg7c1crlg5p" path="res://assets/pics/spritesheets/explo.png" id="2_hyh7e"]
[ext_resource type="AudioStream" uid="uid://bv28rsdvwqrru" path="res://assets/sounds/gubbel_gubbel.wav" id="2_pjqaj"]
[ext_resource type="Texture2D" uid="uid://ct3xvbbhajjt2" path="res://assets/pics/spritesheets/roll.png" id="2_u7ta1"]
[ext_resource type="Texture2D" uid="uid://brjbymwbrm5fv" path="res://assets/pics/spritesheets/wings.png" id="3_co2ll"]
[ext_resource type="AudioStream" uid="uid://boc62wcemc4or" path="res://assets/sounds/turkey_woohoo.wav" id="7_66ddh"]
[ext_resource type="AudioStream" uid="uid://bfqo0yi2mwrq" path="res://assets/sounds/turkey_scream2.wav" id="8_a6x2s"]
[ext_resource type="AudioStream" uid="uid://c3gjcuypo7rr3" path="res://assets/sounds/turkey_scream1.wav" id="9_usjel"]
[ext_resource type="AudioStream" uid="uid://cf36keampgnog" path="res://assets/sounds/turkey_walk.wav" id="10_p34m5"]
[ext_resource type="AudioStream" uid="uid://c5bb51mi2kuej" path="res://assets/sounds/explosion1.wav" id="12_rlo1y"]
[ext_resource type="AudioStream" uid="uid://bf1oyd343d8fl" path="res://assets/sounds/explosion3.wav" id="13_4kf4d"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4ugma"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3lpdk"]
radius = 31.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ivoob"]
atlas = ExtResource("2_hyh7e")
region = Rect2(0, 0, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_unxif"]
atlas = ExtResource("2_hyh7e")
region = Rect2(543, 0, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnm4"]
atlas = ExtResource("2_hyh7e")
region = Rect2(1086, 0, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ml4h"]
atlas = ExtResource("2_hyh7e")
region = Rect2(1629, 0, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhhr6"]
atlas = ExtResource("2_hyh7e")
region = Rect2(0, 547, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhkbs"]
atlas = ExtResource("2_hyh7e")
region = Rect2(543, 547, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_sseoq"]
atlas = ExtResource("2_hyh7e")
region = Rect2(1086, 547, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhwv6"]
atlas = ExtResource("2_hyh7e")
region = Rect2(1629, 547, 543, 547)

[sub_resource type="AtlasTexture" id="AtlasTexture_61l70"]
atlas = ExtResource("1_vb6q4")
region = Rect2(0, 0, 248, 234)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip11s"]
atlas = ExtResource("1_vb6q4")
region = Rect2(248, 0, 248, 234)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0vlx"]
atlas = ExtResource("1_vb6q4")
region = Rect2(496, 0, 248, 234)

[sub_resource type="AtlasTexture" id="AtlasTexture_441g2"]
atlas = ExtResource("1_vb6q4")
region = Rect2(744, 0, 248, 234)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghjsf"]
atlas = ExtResource("2_u7ta1")
region = Rect2(0, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_13ohm"]
atlas = ExtResource("2_u7ta1")
region = Rect2(356, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_olhde"]
atlas = ExtResource("2_u7ta1")
region = Rect2(712, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbd03"]
atlas = ExtResource("2_u7ta1")
region = Rect2(1068, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_twtg8"]
atlas = ExtResource("2_u7ta1")
region = Rect2(1424, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tvfi"]
atlas = ExtResource("2_u7ta1")
region = Rect2(1780, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_dobs7"]
atlas = ExtResource("2_u7ta1")
region = Rect2(2136, 0, 356, 313)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnuqe"]
atlas = ExtResource("2_2lr2m")
region = Rect2(0, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaiyf"]
atlas = ExtResource("2_2lr2m")
region = Rect2(330, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_o44y5"]
atlas = ExtResource("2_2lr2m")
region = Rect2(660, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfc3c"]
atlas = ExtResource("2_2lr2m")
region = Rect2(990, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2gem"]
atlas = ExtResource("2_2lr2m")
region = Rect2(1320, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsuy0"]
atlas = ExtResource("2_2lr2m")
region = Rect2(1650, 0, 330, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_actbo"]
atlas = ExtResource("3_co2ll")
region = Rect2(0, 0, 330, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwss3"]
atlas = ExtResource("3_co2ll")
region = Rect2(330, 0, 330, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5vm7"]
atlas = ExtResource("3_co2ll")
region = Rect2(660, 0, 330, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_hndy7"]
atlas = ExtResource("3_co2ll")
region = Rect2(990, 0, 330, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jxbo"]
atlas = ExtResource("3_co2ll")
region = Rect2(1320, 0, 330, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl7m2"]
atlas = ExtResource("3_co2ll")
region = Rect2(1650, 0, 330, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_qr73g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivoob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unxif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ml4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhhr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhkbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sseoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhwv6")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61l70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip11s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0vlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_441g2")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghjsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13ohm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olhde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbd03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twtg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tvfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dobs7")
}],
"loop": true,
"name": &"roll",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnuqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaiyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o44y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfc3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2gem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsuy0")
}],
"loop": true,
"name": &"walk",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_actbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwss3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5vm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hndy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jxbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl7m2")
}],
"loop": true,
"name": &"wingflap",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4w26h"]
radius = 32.0624

[sub_resource type="CircleShape2D" id="CircleShape2D_htlko"]
radius = 42.0119

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dtid3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:linear_velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:haveChaosMode")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:inertia")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:sleeping")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:linear_damp")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:angular_velocity")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("animation:animation")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("animation:frame")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("animation:flip_h")
properties/10/spawn = true
properties/10/replication_mode = 1

[node name="Turkey" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_4ugma")
gravity_scale = 0.0
script = ExtResource("1_ltaqm")

[node name="gubbelgubbel" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pjqaj")
volume_db = 15.0
pitch_scale = 1.5

[node name="wall_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3lpdk")

[node name="whoohoo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_66ddh")

[node name="scream2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_a6x2s")

[node name="scream1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_usjel")

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_p34m5")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_qr73g")
animation = &"idle"

[node name="player_interaction_area" type="Area2D" parent="."]

[node name="player_interaction_collision" type="CollisionShape2D" parent="player_interaction_area"]
shape = SubResource("CircleShape2D_4w26h")

[node name="player_scare_area" type="Area2D" parent="."]
collision_layer = 16

[node name="player_scare_collision" type="CollisionShape2D" parent="player_scare_area"]
shape = SubResource("CircleShape2D_htlko")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_dtid3")

[node name="explosion1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_rlo1y")
volume_db = 3.915

[node name="explosion2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_4kf4d")
volume_db = 5.714

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="player_interaction_area" to="." method="_on_area_2d_body_entered"]
[connection signal="child_entered_tree" from="player_scare_area/player_scare_collision" to="." method="_on_player_scare_collision_child_entered_tree"]
